[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/main_menu/main_menu_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/main_menu/main_menu.gd" type="Script" id=2]
[ext_resource path="res://source/resources/project/font/m5x7.tres" type="DynamicFont" id=3]
[ext_resource path="res://source/clouds.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/resources/character/frames/hollow_wishmaker.tres" type="SpriteFrames" id=7]
[ext_resource path="res://assets/bgm/title.ogg" type="AudioStream" id=8]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" parent="." instance=ExtResource( 4 )]

[node name="Wishmaker" type="AnimatedSprite" parent="."]
position = Vector2( 160, 64 )
frames = ExtResource( 7 )
frame = 3
playing = true

[node name="Title" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -127.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleText" type="Label" parent="Title"]
modulate = Color( 0.0267029, 0, 0.488281, 1 )
margin_left = 135.0
margin_top = 42.0
margin_right = 184.0
margin_bottom = 55.0
custom_fonts/font = ExtResource( 3 )
text = "Cirruseng"
align = 1

[node name="Options" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 127.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" parent="Options" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 2.0
margin_right = 320.0
margin_bottom = 22.0
focus_neighbour_bottom = NodePath("../NewGame")
text = "Load Game"

[node name="NewGame" parent="Options" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 320.0
margin_bottom = 46.0
focus_neighbour_top = NodePath("../LoadGame")
focus_neighbour_right = NodePath("../LoadDevMode")
focus_neighbour_bottom = NodePath("../LoadDevMode")
text = "New Game"

[node name="LoadDevMode" parent="Options" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 320.0
margin_bottom = 70.0
focus_neighbour_top = NodePath("../NewGame")
focus_neighbour_bottom = NodePath("../Quit")
text = "Load Dev Mode"

[node name="Quit" parent="Options" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 74.0
margin_right = 320.0
margin_bottom = 94.0
focus_neighbour_top = NodePath("../LoadDevMode")
text = "Quit"

[node name="Controls" type="CenterContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -45.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlDescription" type="Label" parent="Controls"]
modulate = Color( 0, 0.0196078, 0.478431, 1 )
margin_top = 8.0
margin_right = 68.0
margin_bottom = 37.0
text = "Move: Arrow keys
Select: X"

[node name="Bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="Options/LoadGame" to="." method="_on_LoadGame_pressed"]
[connection signal="pressed" from="Options/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Options/LoadDevMode" to="." method="_on_LoadDevMode_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
